ProjetCompil/Verif/Test/fail/typeNonCompatible5.cas
program
	A : boolean;
	B : 1..5;
begin
	A := B;
end.
	
